--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -44,8 +44,8 @@
     
     .heroimage img{
         width: 100%;
-        max-width: 300px;
-        height: 45vh;
+        max-width: 400px;
+        max-height: 35vh;
     }
     .desktop-image {
         display: none;
