--- a/index.css
+++ b/index.css
@@ -2,153 +2,154 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration:none;
+  list-style-type: none;
 }
 
 body{
   background-color: #f8f8f8ff;
   color: #333;
-  padding:  0 5px;
   font-family: "Epilogue", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
 
-/* Navbar */
-.navbar{
+/* header */
+.header{
   display: flex;
   justify-content: space-between;
-  margin: 15px 0;
-
+  align-items: center;
+  padding: 20px 40px;
 }
-.navbar .logo {
-  font-size: 30px;
+.logo{
+  font-size: 26px;
   font-weight: bold;
-  margin: 0 20px;
+  margin-right: 40px;
 }
-.logo:hover{
-  /* text-shadow: 0 0 25px rgb(255, 30, 236); */
-  transform: scale(1.1);
-}
-/* Nav Links */
-.nav-links {
-  list-style: none;
+
+/* navbar */
+.navbar{
   display: flex;
   align-items: center;
-  gap: 25px;
 }
 
-.nav-links li {
-  position: relative;
-  margin-right: 12px;
-}
-
-.nav-links a {
-  text-decoration: none;
+.navbar a{
+  margin: 0 15px;
+  font-size: 14px;
   color: grey;
-  font-weight: 500;
-  font-size: 15px;
-}
-.nav-links a:hover {
-  color: black;
 }
 
-/* Dropdown Menu */
+.header-button a {
+  margin: 0 10px;
+  color: grey;
+  padding: 8px 16px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.header-button .register{
+  padding: 10px 18px;
+  border-radius: 10px;
+  border: 1px solid #333;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.header-button .register:hover {
+  color:white;
+  background-color: #007bff;
+  transform: scale(1.1);
+}
+
+.dropdown{
+  position: relative;
+}
+
+.dropbtn{
+  color:#333;
+  margin-right: 15px;
+}
+
 .dropdown-content{
   display: none;
   position: absolute;
-  background-color: #fff;
-  padding: 8px;
+  background-color: #ffff;
+  padding: 10px 0;
+  border-radius: 5px;
+  z-index: 1;
+}
+
+.dropdown-content a{
   list-style: none;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 100;
+  color: #555;
+  display: block;
 }
 
 .dropdown-content li {
   padding: 8px 16px;
 }
-.dropdown-content a {
-  color: #555;
-  display: block;
-}
+
 
 .dropdown:hover .dropdown-content{
   display: block;
 }
-.login, .register {
-  margin-right: 20px;
-  text-decoration: none;
-  color: grey;
-  font-size: 15px;
-  align-items: center;
-}
-.register:hover {
-  color:white;
-  background-color: #007bff;
-  transform: scale(1.1);
-}
-.register{
-  padding: 10px 14px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-}
-
 .hamburger {
-  display: none;
-  font-size: 30px;
+  font-size: 24px;
   cursor: pointer;
-  margin-right: 20px;
+  display: none;
 }
 
-/* Hero Section */
-.container {
-  padding: 10px 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+ /* Hero Section */
+
+ .container {
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  padding: 20px 30px;
 }
 
 .hero {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  gap: 40px;
-  /* margin: 0px 30px; */
+  gap: 100px;
+  margin-top: 15px;
 }
 
 .hero-content {
   max-width: 550px;
 }
 .hero-content h1{
-  font-size: 60px;
+  font-size: 70px;
 }
 
 .hero-content p{
-  margin: 35px 0;
+  margin: 20px 0;
+  padding-left: 10px;
   font-size: 17px;
   line-height: 1.5;
   color: grey;
 }
- 
+
 .learnmore {
-  padding: 10px 25px;
+  padding: 10px 20px;
   background-color: #007bff;
   color: #fff;
   border-radius: 8px;
   font-size: 17px;
   cursor: pointer;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .clients img {
   margin-top: 40px;
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
 .heroimage img{
   width: 100%;
   max-width: 600px;
-  height: 80vh;
+  height:60vh;
 }
 .mobile-image {
   display: none;
