--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,5 +1,5 @@
-@media screen and (max-width: 768px) {
-    .nav-links {
+@media screen and (max-width: 790px) {
+    /* .nav-links {
       display: none;
       flex-direction: column;
       background-color: #fff;
@@ -8,44 +8,48 @@
       left: 0;
       width: 100%;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
+    } */
     
-    .header-button {
-        display: none;
+    .dropdown, .about, .header-button{
+      flex-direction: column;
+      background-color: #fff;
+      position: absolute;
+      top: 50px; 
+      left: 0;
+      width: 100%;
+      display: none;
+      z-index: 10;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
-    .nav-links.active {
+
+    .dropdown.active, .about.active, .header-button.active {
       display: flex;
     }
-  
+
+    .dropdown-content {
+      display: block;
+    }
+
     .hamburger {
       display: block;
       font-size: 30px;
       cursor: pointer;
-      margin-right: 20px;
     }
-  
+
+    /* main */
     .hero {
       flex-direction:column-reverse;
       text-align: center;
     }
-  
-    .hero-content {
-      margin-bottom: 2rem;
-    }
-    .hero-content h1{
-        font-size: 30px;
-      }
-      
-    .clients img {
-        width: 20%;
-        margin-top: 40px;
-        margin-right: 10px;
-    }
     
-    .heroimage img{
-        width: 100%;
-        max-width: 400px;
-        max-height: 35vh;
+    .hero-content h1{
+      font-size: 30px;
+      font-weight: 900;
+    }
+
+    .clients img {
+      width: 15%;
+      margin: 30px 10px;
     }
     .desktop-image {
         display: none;
@@ -54,10 +58,26 @@
     .mobile-image {
         display: block;
     }
-  }
+}
   
   /* Hide hamburger by default */
   .hamburger {
     display: none;
   }
-  
+
+@media screen and (max-width: 600px){
+   
+    .hero-content {
+      width: 400px;
+    }
+
+    .clients img {
+      width: 18%;
+      margin: 30px 8px;
+    }
+    
+    .heroimage img{
+      width: 370px;
+      height: 48vh;
+    }
+}
