--- a/index.css
+++ b/index.css
@@ -93,10 +93,19 @@ body{
 .dropdown:hover .dropdown-content{
   display: block;
 }
+
 .hamburger {
-  font-size: 24px;
   cursor: pointer;
   display: none;
+}
+
+.bar{
+  display: block;
+  width: 30px;
+  height: 3px;
+  margin: 5px;
+  background-color: #333;
+  transition: all 0.3s ease-in-out;
 }
 
  /* Hero Section */
